<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GameActivity">


    <include
        layout="@layout/game_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ivPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics"
        app:layout_constraintVertical_bias="0.40" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeTitle" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"
        android:background="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <TextView
        android:id="@+id/tvStatisticsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/statistics_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatisticsText" />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="120dp"
        android:layout_height="104dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/rock_image"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="120dp"
        android:layout_height="104dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/paper_image"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivScissors"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/ivRock" />

    <ImageView
        android:id="@+id/ivScissors"
        android:layout_width="120dp"
        android:layout_height="104dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/scissors_image"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>